--- a/graphics.html
+++ b/graphics.html
@@ -1,4 +1,158 @@
-<div class="Graphics" style="width: 1440px; height: 3679px; position: relative; background: #FFF1DD">
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="home.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+  <script src="script.js"></script>
+	
+<Title>     
+Home | Jade Roberts Portfolio 
+</Title>  
+<style type=text/css>  
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
+body {
+  /* Define the gradient */
+  background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
+  
+  /* Set the height to 100% to take the full view */
+  height: auto;
+  
+  /* Set the margin to 0 to remove browser default margins */
+  margin: 0;
+  
+  /* No scroll bar*/
+  overflow: hidden;
+}
+
+header {  
+  
+background-color: #8ecae6;  
+position: fixed;  
+left: 0;  
+right: 0;   
+height: 100px;  
+display: flex;  
+align-items: center;  
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+	
+}
+
+header * {  
+display: inline;  
+	
+} 
+
+header li {  
+	margin:20px;  
+	
+} 
+
+header li a {  
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  left: 60px; top: 35px;
+  font-size: 40px;
+  font-weight: 400;
+  font-family: Lilita One;
+}  
+
+/*dropdown section and placement*/
+
+header .dropdown {
+  overflow: hidden;
+}
+
+/*dropdown font and text (work)*/
+
+header .dropdown .dropbtn {
+  font-size: relative;  
+  border: none;
+	z-index: 10;
+  outline: none;
+  background-color: inherit;
+  font-family: Gudea;
+  margin: 0;
+}
+
+a:hover, .dropdown:hover .dropbtn {
+    background-color: #219EBC;
+    border-size: 80px 900px;
+    border-radius: 80px 900px;
+}
+
+/*the link text and box*/
+
+.dropdown-content {
+   margin: 0px;
+	padding: 0px;
+	background-color: #FFF1DD;
+display: none;
+  position: absolute;
+  min-width: fit-content;
+min-height: min-content;
+	
+	
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 400;
+	padding: 12px 16px;
+    margin:0px;
+    display: block;
+    font-family: Gudea;
+  font-size: 18px;
+	
+}
+
+.dropdown-content a:hover {
+    background-color: #FFA800;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+}
+
+	
+</style>  
+</head> 
+<Body style="
+    height: 1000px";>   
+<header>  
+<nav class="sticky">
+	<ul class="header">
+	<li><a href="index.html">Home</a></li>
+	    <li><a href="about.html">About</a></li>
+	    <div class="dropdown"><li><a href="projects.html">
+        
+    <button class="dropbtn">Work
+      <i class="fa fa-caret-down"></i></a></li>
+    </button>
+    <div class="dropdown-content">
+     <a href="graphics.html">Graphic Design and Promotional Assets </a>
+      <a href="proto.html">UX Research and Design </a>
+      <a href="copy.html">Copywriting and Conversation Design </a>
+      <a href="Film.html">Film Prototype Assets and Motion Graphics </a>
+    </div>
+  </div> 
+	    <li><a href="shorts.html">Creative Outlets</a></li>
+	    <li><a href="contact.html">Contact</a></li>
+	<li><a href="Example.html">Example</a></li>
+	</ul>
+	</nav>
+</header>  
+  <body>
+    <div class="Graphics" style="width: 1440px; height: 3679px; position: relative; background: #FFF1DD">
   <div class="Frame1" style="width: 400px; left: 80px; top: 400px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px; overflow: hidden; border: 1px black solid; justify-content: center; align-items: center; display: inline-flex">
     <img class="Image1" style="width: 400px; height: 405px" src="https://via.placeholder.com/400x405" />
   </div>
@@ -45,3 +199,4 @@
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
 </div>
+  </body>
