--- a/shorts.html
+++ b/shorts.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
   <meta charset="utf-8">
@@ -47,9 +46,9 @@ display: inline;
 } 
 
 header li {  
-margin: 20px;  
-
-}  
+	margin:20px;  
+	
+} 
 
 header li a {  
   color: black;
@@ -88,23 +87,29 @@ a:hover, .dropdown:hover .dropbtn {
 /*the link text and box*/
 
 .dropdown-content {
-   background-color: #FFF1DD;
+   margin: 0px;
+	padding: 0px;
+	background-color: #FFF1DD;
 display: none;
   position: absolute;
   min-width: fit-content;
 min-height: min-content;
-	margin: 0;
-	padding: 0;
+	
 	
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.dropdown-content li a {
-  display: block;
-	border: none;
-	font-family: Gudea;
-	font-size: 20px;
+.dropdown-content a {
+    color: black;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 400;
+	padding: 12px 16px;
+    margin:0px;
+    display: block;
+    font-family: Gudea;
+  font-size: 18px;
 	
 }
 
@@ -134,10 +139,10 @@ min-height: min-content;
       <i class="fa fa-caret-down"></i></a></li>
     </button>
     <div class="dropdown-content">
-      <li><a href="graphics.html">Graphic Design and Promotional Assets </a></li>
-      <li><a href="proto.html">UX Research and Design </a></li>
-      <li><a href="copy.html">Copywriting and Conversation Design </a></li>
-      <li><a href="Film.html">Film Prototype Assets and Motion Graphics </a></li>
+     <a href="graphics.html">Graphic Design and Promotional Assets </a>
+      <a href="proto.html">UX Research and Design </a>
+      <a href="copy.html">Copywriting and Conversation Design </a>
+      <a href="Film.html">Film Prototype Assets and Motion Graphics </a>
     </div>
   </div> 
 	    <li><a href="shorts.html">Creative Outlets</a></li>
@@ -146,7 +151,7 @@ min-height: min-content;
 	</ul>
 	</nav>
 </header>  
-  
+  <body>
   <div class="CreativeOutlets" style="width: 1440px; height: 3436px; position: relative; background: #FFF1DD">
   <div class="Design" style="width: 2000.04px; height: 877.90px; left: -240px; top: 2338px; position: absolute">
     <div class="Bg" style="width: 1998.04px; height: 877.90px; left: 0px; top: 0px; position: absolute">
@@ -702,6 +707,9 @@ min-height: min-content;
       </div>
     </div>
   </div>
+  </body>
+</Body>
+</html>
 
   
   
