--- a/Film.html
+++ b/Film.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<html>
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="home.css" />
@@ -10,7 +9,7 @@
   <script src="script.js"></script>
 	
 <Title>     
-Film Assets | Jade Roberts Portfolio 
+Home | Jade Roberts Portfolio 
 </Title>  
 <style type=text/css>  
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
@@ -48,9 +47,9 @@ display: inline;
 } 
 
 header li {  
-margin: 20px;  
-
-}  
+	margin:20px;  
+	
+} 
 
 header li a {  
   color: black;
@@ -80,46 +79,54 @@ header .dropdown .dropbtn {
   margin: 0;
 }
 
-header a:hover, .dropdown:hover .dropbtn {
+a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
     border-size: 80px 900px;
     border-radius: 80px 900px;
 }
 
-/*the link text*/
+/*the link text and box*/
 
-header .dropdown-content {
-   background-color: #FFF1DD;
+.dropdown-content {
+   margin: 0px;
+	padding: 0px;
+	background-color: #FFF1DD;
 display: none;
   position: absolute;
-  min-width: 160px;
+  min-width: fit-content;
+min-height: min-content;
+	
+	
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-header .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+.dropdown-content a {
+    color: black;
+  text-align: center;
   text-decoration: none;
-  float: left;
-  display: block;
-	font-family: Gudea;
+  font-weight: 400;
+	padding: 12px 16px;
+    margin:0px;
+    display: block;
+    font-family: Gudea;
+  font-size: 18px;
+	
 }
 
-header .dropdown-content a:hover {
- 
+.dropdown-content a:hover {
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
 }
 
-header .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
   display: flex;
-  
 }
+
 	
 </style>  
-</Head> 
+</head> 
 <Body style="
     height: 1000px";>   
 <header>  
@@ -133,10 +140,10 @@ header .dropdown:hover .dropdown-content {
       <i class="fa fa-caret-down"></i></a></li>
     </button>
     <div class="dropdown-content">
-      <a href="#">Graphic Design and Promotional Assets </a>
-      <a href="#">UX Research and Design </a>
-      <a href="#">Copywriting and Conversation Design </a>
-      <a href="#">Film Prototype Assets and Motion Graphics </a>
+     <a href="graphics.html">Graphic Design and Promotional Assets </a>
+      <a href="proto.html">UX Research and Design </a>
+      <a href="copy.html">Copywriting and Conversation Design </a>
+      <a href="Film.html">Film Prototype Assets and Motion Graphics </a>
     </div>
   </div> 
 	    <li><a href="shorts.html">Creative Outlets</a></li>
@@ -157,3 +164,5 @@ header .dropdown:hover .dropdown-content {
 
   
 </body>
+</Body>
+</html>
