--- a/shorts.html
+++ b/shorts.html
@@ -29,11 +29,10 @@ body {
 
 header {  
   
-background-color: #8ecae6;  
+background-color: ##FFF1DD;;  
 position: fixed;  
 left: 0;  
 right: 0;   
-height: 100px;  
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
@@ -79,7 +78,7 @@ header .dropdown .dropbtn {
 }
 
 a:hover, .dropdown:hover .dropbtn {
-    background-color: #219EBC;
+    background-color: ##FFF1DD;
     border-size: 80px 900px;
     border-radius: 80px 900px;
 }
@@ -341,20 +340,6 @@ min-height: min-content;
       <div class="Rectangle55" style="width: 317px; height: 65px; left: 562px; top: 0px; position: absolute; background: #FFF1DD"></div>
     </div>
     <div class="ShortFilms" style="width: 1281px; height: 79px; left: 79px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 48px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Short Films</div>
-  </div>
-  <div class="Menu" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-    <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: absolute">
-      <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: absolute; background: #8ECAE6"></div>
-      <div class="Logo" style="width: 101.90px; height: 113.37px; left: 1310px; top: 3px; position: absolute">
-        <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
-        <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
-      </div>
-    </div>
-    <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
-    <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
-    <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
-    <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
-    <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
   <div class="CuriousAboutThingsIDoForFunHereSALookAtSomeOfJadeSMostRecentShortFilms" style="width: 1386px; left: 13px; top: 339px; position: absolute; text-align: center; color: #080705; font-size: 32px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Curious about things I do for fun? Here’s a look at some of Jade’s most recent short films.</div>
 </div>
