--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ background-color: #8ecae6;
 position: fixed;  
 left: 0;  
 right: 0;   
-height: max-content;
+height: 1000px;
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
@@ -153,7 +153,7 @@ min-height: min-content;
 	</nav>
 </header>  
   <body>
-  <div class="Bg" style="left: auto;  top: 876px; position: absolute">
+  <div class="Bg" style="align-items:center; position: absolute">
     <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
       <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
       <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
@@ -255,7 +255,7 @@ min-height: min-content;
     <div class="Line5" style="width: 222.01px; height: 0px; left: 253px; top: 383px; position: absolute; border: 5px #DE4D86 solid"></div>
     <div class="Line3" style="width: 242px; height: 0px; left: 823px; top: 88px; position: absolute; border: 7px #DE4D86 solid"></div>
   </div>
-  <img class="Rectangle3" style="width: 561px; height: 294px; left: 85px; top: 1096px; position: absolute; border-radius: 72px" src="https://via.placeholder.com/561x294" />
+  <img class="Rectangle3" style="width: 561px; height: 294px; left: 85px; top: 1096px; position: absolute; border-radius: 72px" src="headshot.jpg" />
   <div class="FindOutMoreButton" style="width: 305px; height: 80px; left: 213px; top: 1460px; position: absolute">
     <div class="Rectangle52" style="width: 305px; height: 73.09px; left: 0px; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
     <div class="Rectangle53" style="width: 294.64px; height: 73.09px; left: 5.18px; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
