--- a/shorts.html
+++ b/shorts.html
@@ -26,11 +26,12 @@ body {
 }
 
 header {  
-background-color: #219EBC;  
+background-color: #8ecae6;  
 position: fixed;  
 left: 0;  
-right: 0;   
-	height:100px;
+right: 0; 
+	z-index:10;
+height:100px;
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
