--- a/shorts.html
+++ b/shorts.html
@@ -15,7 +15,7 @@ Home | Jade Roberts Portfolio
 @import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
 body {
   /* Define the gradient */
-  background-image: linear-gradient(180deg, #FFF1DD; 0%, #219EBC 100%);
+  background-image: linear-gradient(180deg, #FFF1DD, #219EBC);
   
   /* Set the height to 100% to take the full view */
   height: auto;
