--- a/shorts.html
+++ b/shorts.html
@@ -15,10 +15,10 @@ Home | Jade Roberts Portfolio
 @import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
 body {
   /* Define the gradient */
-  background-image: linear-gradient(180deg, #FFF1DD, #219EBC);
+  background-image: linear-gradient(180deg, #FFF1DD, transparent);
   
   /* Set the height to 100% to take the full view */
-  height: auto;
+  height: 100%;
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
@@ -151,7 +151,7 @@ min-height: min-content;
 </header>  
   <body>
  
-  <div class="Design" style="width: 2000.04px; height: 877.90px; left: -240px; top: 2338px; position: absolute">
+  <div class="Design" style="width: auto; height: auto; left: auto; top: 2338px; position: absolute">
     <div class="Bg" style="width: 1998.04px; height: 877.90px; left: 0px; top: 0px; position: absolute">
       <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
         <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(90deg, #FFF1DD 67%, #FFA800 100%)"></div>
