--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@ Pattern div {
     <div class="Line5" style="width: 222.01px; height: 0px; left: 253px; top: 383px; position: absolute; border: 5px #DE4D86 solid"></div>
     <div class="Line3" style="width: 242px; height: 0px; left: 823px; top: 88px; position: absolute; border: 7px #DE4D86 solid"></div>
   </div>
-  <img class="Rectangle3" style="width: auto; height: auto; left: auto; top: 1096px; position: absolute; border-radius: 72px" src="headshot.jpg" />
+  <img class="Rectangle3" style="width: auto; height: auto; left: auto; top: 1096px; position: absolute; border-radius: 72px" src="images/headshot.jpg" />
   <div class="FindOutMoreButton" style="width: auto; height: auto; left: auto; top: 1460px; position: absolute">
     <div class="Rectangle52" style="width: 305px; height: 73.09px; left: 0px; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
     <div class="Rectangle53" style="width: 294.64px; height: 73.09px; left: 5.18px; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
