--- a/about.html
+++ b/about.html
@@ -9,116 +9,18 @@
   <script src="script.js"></script>
 	
 <Title>     
-Home | Jade Roberts Portfolio 
+About | Jade Roberts Portfolio 
 </Title>  
-<style type=text/css>  
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
+<style>
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
-  height: 100%;
+  height: auto;
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-}
-
-header {  
-  
-background-color: #8ecae6;  
-position: fixed;  
-left: 0;  
-right: 0;   
-height: 100px;
-display: flex;  
-align-items: center;  
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-	
-}
-
-header * {  
-display: inline;  
-	
-} 
-
-header li {  
-	margin:20px;  
-	
-} 
-
-header li a {  
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  left: 60px; top: 35px;
-  font-size: 40px;
-  font-weight: 400;
-  font-family: Lilita One;
-}  
-
-/*dropdown section and placement*/
-
-header .dropdown {
-  overflow: hidden;
-}
-
-/*dropdown font and text (work)*/
-
-header .dropdown .dropbtn {
-  font-size: relative;  
-  border: none;
-	z-index: 10;
-  outline: none;
-  background-color: inherit;
-  font-family: Gudea;
-  margin: 0;
-}
-
-a:hover, .dropdown:hover .dropbtn {
-    background-color: #219EBC;
-    border-size: 80px 900px;
-    border-radius: 80px 900px;
-}
-
-/*the link text and box*/
-
-.dropdown-content {
-   margin: 0px;
-	padding: 0px;
-	background-color: #FFF1DD;
-display: none;
-  position: absolute;
-  min-width: fit-content;
-min-height: min-content;
-	
-	
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-  text-align: center;
-  text-decoration: none;
-  font-weight: 400;
-	padding: 12px 16px;
-    margin:0px;
-    display: block;
-    font-family: Gudea;
-  font-size: 18px;
-	
-}
-
-.dropdown-content a:hover {
-    background-color: #FFA800;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    
-}
-
-.dropdown:hover .dropdown-content {
-  display: flex;
 }
 
 Bg div {
